@@ -107,6 +107,7 @@
      * Fixed item updater allowing invalidation of a disabled item
      * Fixed upload PUT Print-After-Upload if already printing error
      * Added api/v1/<storage>/<path> delete endpoint
+     * Fixed a semicolon in a filename being printed breaking everything
 
 0.6.0 (2021-12-17)
     * Added endpoint for control of extruder
